--- a/src/Components/LandingPage/Hero.css
+++ b/src/Components/LandingPage/Hero.css
@@ -8,20 +8,26 @@
     background-color: #266696;
     font-size: 25px;
     text-align: center;
-    padding-top: 70px;
+    padding-top: 50px;
     padding-bottom: 150px;
     gap: 20px;
 }
 .hero h2{
     width: 50%;
+    font-size: 25px;
 }
 .hero button{
     color: white;
     border: 4px solid white;
     background-color: #266696;
-    font-size: 30px;
-    padding: 25px 55px;
+    font-size: 20px;
+    padding: 15px 45px;
     border-radius: 20px;
+}
+.hero button:hover{
+    background-color: white;
+    color: #266696;
+    cursor: pointer;
 }
 
 @media screen and (max-width:960px) {
