--- a/src/Components/View/AboutDesigner.css
+++ b/src/Components/View/AboutDesigner.css
@@ -89,7 +89,20 @@
    
     .about-user{
         width: 80%;
+        justify-content: center;
+        align-items: center;
+        display: flex;
         flex-direction: column;
+        gap: 20px;
+    }
+    .user-img {
+        width: 100%;
+        justify-content: center;
+        align-items: center;
+        display: flex;
+    }
+    .user-img img{
+        width: 40%;
     }
     .user-work-container{
         width: 80%;
@@ -107,9 +120,16 @@
         font-size: 15px;
     }
     .user-btn {
-        width: 100%;
-        gap: 10px;
+        width: 50%;
+        gap: 0px;
     }
-   
-
+    .user-name {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .user-contact{
+        width: 100%;
+    }
 }
